--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"pdf": "pandoc -H texheader.tex header.md content.md footnotes.md nocite.md bib-header.md --filter pandoc-citeproc -o processed/paper.pdf --bibliography ../../../../Bib/DubBib.bib",
-		"latex": "pandoc -s -H texheader.tex header.md content.md footnotes.md nocite.md bib-header.md --filter pandoc-citeproc -o processed/papertex.tex --bibliography ../../../../Bib/DubBib.bib --natbib",
-		"word": "pandoc -H texheader.tex header.md content.md footnotes.md nocite.md bib-header.md --filter pandoc-citeproc -o processed/paper.docx --bibliography ../../../../Bib/DubBib.bib",
-		"pdf-font": "pandoc -H texheader.tex headerfont.md content.md footnotes.md nocite.md bib-header.md --pdf-engine=xelatex --filter pandoc-citeproc -o processed/paper.pdf --bibliography ../../../../Bib/DubBib.bib"
+		"pdf": "pandoc -H texheader.tex header.md content.md footnotes.md nocite.md bib-header.md --filter pandoc-citeproc -o processed/paper.pdf --bibliography ../../../Bib/DubBib.bib",
+		"latex": "pandoc -s -H texheader.tex header.md content.md footnotes.md nocite.md bib-header.md --filter pandoc-citeproc -o processed/papertex.tex --bibliography ../../../Bib/DubBib.bib --natbib",
+		"word": "pandoc -H texheader.tex header.md content.md footnotes.md nocite.md bib-header.md --filter pandoc-citeproc -o processed/paper.docx --bibliography ../../../Bib/DubBib.bib",
+		"pdf-font": "pandoc -H texheader.tex headerfont.md content.md footnotes.md nocite.md bib-header.md --pdf-engine=xelatex --filter pandoc-citeproc -o processed/paper.pdf --bibliography ../../../Bib/DubBib.bib"
 	}
 }
